[project]
name = "worldview-data-ingestion"
version = "0.1.0"
description = "Scheduled feed collectors for WorldView Tactical Intelligence Platform"
requires-python = ">=3.12"
dependencies = [
    "httpx>=0.27",
    "apscheduler>=3.10",
    "qdrant-client>=1.9",
    "structlog>=24.1",
    "pydantic>=2.6",
    "pydantic-settings>=2.2",
    "feedparser>=6.0",
    "lxml>=5.1",
    "redis>=5.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
include = ["*.py", "feeds/**/*.py"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "SIM"]
