[project]
name = "worldview-data-ingestion"
version = "0.1.0"
description = "Scheduled feed collectors for WorldView Tactical Intelligence Platform"
requires-python = ">=3.12"
dependencies = [
    "httpx>=0.27",
    "apscheduler>=3.10",
    "qdrant-client>=1.9",
    "structlog>=24.1",
    "pydantic>=2.6",
    "pydantic-settings>=2.2",
    "feedparser>=6.0",
    "lxml>=5.1",
    "redis>=5.0",
    "pyyaml>=6.0",
    "telethon>=1.36",
    "cryptg>=0.4",
    "polars>=1.0",
    "pyarrow>=17.0",
    "click>=8.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
]
notebooklm = [
    "notebooklm-py[browser]",
    "playwright",
    "click>=8.0",
    "anthropic>=0.40",
    "pydub>=0.25",
]

[project.scripts]
odin-ingest-nlm = "nlm_ingest.cli:cli"
odin-ingest-gdelt = "gdelt_raw.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
include = ["*.py", "feeds/**/*.py", "feeds/**/*.yaml", "nlm_ingest/**/*.py", "nlm_ingest/prompts/*.txt"]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "SIM"]

[dependency-groups]
dev = [
    "fakeredis>=2.35.1",
    "pytest-asyncio>=1.3.0",
    "pytest-httpx>=0.36.2",
]
