[project]
name = "worldview-intelligence"
version = "0.1.0"
description = "WorldView Intelligence — LangGraph Multi-Agent RAG Pipeline"
requires-python = ">=3.12"
dependencies = [
    "langgraph>=0.3.0",
    "langchain-core>=0.3.0",
    "langchain-community>=0.3.0",
    "langchain-openai>=0.3.0",
    "qdrant-client>=1.13.0",
    "httpx>=0.28.0",
    "structlog>=25.0",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.34.0",
    "neo4j>=5.23",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
include = ["main.py", "*.py", "agents/**/*.py", "graph/**/*.py", "rag/**/*.py", "extraction/**/*.py", "codebook/**/*.py", "codebook/**/*.yaml"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
