[project]
name = "munin-distill"
version = "0.1.0"
description = "Munin synthesis distillation pipeline (query-gen -> harvest -> teacher -> filter -> dataset -> eval gate)"
requires-python = ">=3.12"
dependencies = ["httpx>=0.27", "pydantic>=2.7"]

[dependency-groups]
dev = ["pytest>=8"]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
